--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "liveServer.settings.port": 5501
+    "outline.showConstants": true,
+    "outline.showConstructors": true,
+    "terminal.integrated.allowMnemonics": false
 }
